--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/my-koop/module.event",
   "dependencies": {
+    "async": "^0.9.0",
     "mykoop-utils": "git://github.com/my-koop/module.utils#beta"
   }
 }
