--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -1,3 +1,16 @@
 {
-
+  eventNew_failed: "The event could't be added",
+  eventNew_success: "The event was added",
+  createEventWelcome: "Creating an event",
+  name : "Name", 
+  type : "Type",
+  startDate : "Start date",
+  endDate : "End date",
+  startAmount : "Start amount",
+  endAmount : "End amount", 
+  workshop : "Workshop",
+  cashier : "Cashier", 
+  removedEventMessage : "Event was removed",
+  actions : "actions",
+  eventNew: "Add event",
 }
