--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -1,3 +1,16 @@
 {
-
+  eventNew_failed: "L'événement n'a pu être ajouté",
+  eventNew_success: "L'événement a été ajouté",
+  createEventWelcome: "Ajout d'un evénement",
+  name : "Nom", 
+  type : "Type",
+  startDate : "Date début",
+  endDate : "Date fin",
+  startAmount : "Ouverture de caisse",
+  endAmount : "Fermeture de caisse", 
+  workshop : "Atelier",
+  cashier : "Caisse", 
+  removedEventMessage : "L'événement a été supprimé",
+  actions : "Actions",
+  eventNew: "Ajouter un événement"
 }
