--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -11,4 +11,5 @@
   cashier : "Cashier", 
   removedEventMessage : "Event was removed",
   newEvent: "Add event",
+  eventWelcome : "Events list"
 }
