--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -11,5 +11,7 @@
   cashier : "Caisse", 
   removedEventMessage : "L'événement a été supprimé",
   newEvent: "Ajouter un événement",
-  eventWelcome : "Liste des événements"
+  eventWelcome : "Liste des événements",
+  registeredToEventConfirmation : "Vous vous êtes enregistré à l'événement",
+  registerToEventPrompt : "Voulez-vous vous enregistrer à cet événement ?"
 }
