--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -17,4 +17,5 @@
   registerToEventPrompt : "Do you want to register to this event ?",
   switchEventState_true: "Show open",
   switchEventState_false: "Show closed",
+  updateEventWelcome: "Editing event",
 }
