--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -17,4 +17,5 @@
   registerToEventPrompt : "Voulez-vous vous enregistrer à cet événement ?",
   switchEventState_true: "Afficher ouvertes",
   switchEventState_false: "Afficher fermées",
+  updateEventWelcome: "Édition de l'événement",
 }
