--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -18,4 +18,5 @@
   switchEventState_true: "Afficher ouvertes",
   switchEventState_false: "Afficher fermées",
   updateEventWelcome: "Édition de l'événement",
+  countRegistered: "# Enregistrés",
 }
