Starting event. No save

--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -19,4 +19,5 @@
   switchEventState_false: "Afficher fermées",
   updateEventWelcome: "Édition de l'événement",
   countRegistered: "# Enregistrés",
+  startEvent: "Commencer l'événement",
 }
