--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -19,4 +19,5 @@
   switchEventState_false: "Show closed",
   updateEventWelcome: "Editing event",
   countRegistered: "# Registered",
+  startEvent: "Start event",
 }
