--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -20,4 +20,6 @@
   updateEventWelcome: "Editing event",
   countRegistered: "# Registered",
   startEvent: "Start event",
+  endEvent: "End event",
+  eventClosed: "Event closed",
 }
