--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -24,4 +24,6 @@
   eventClosed: "Event closed",
   eventUpdated_success: "Event was updated",
   eventUpdated_failed: "Event could not be updated",
+  eventStarted: "The event was started",
+  eventStartFailed: "The event could not be started",
 }
