--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -26,4 +26,5 @@
   eventUpdated_failed: "L'événement n'a pas pu être mis à jour",
   eventStarted: "L'événement à démarrer",
   eventStartFailed: "L'événement n'a pu être démarrer",
+  datesInvalid_failed: "Les dates rentrées ne sont pas valides",
 }
