--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -27,4 +27,6 @@
   eventStarted: "L'événement à démarrer",
   eventStartFailed: "L'événement n'a pu être démarrer",
   datesInvalid_failed: "Les dates rentrées ne sont pas valides",
+  eventStartEndExplication: "Un événement est démarré lorsqu'il y a un montant initial d'ouverture de caisse. Un événement est fermé (terminé) lorsqu'un montant de fermeture de  caisse est rentré.",
+  
 }
