--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -26,6 +26,6 @@
   eventUpdated_failed: "Event could not be updated",
   eventStarted: "The event was started",
   eventStartFailed: "The event could not be started",
-  datesInvalid_failed: "The dates you entered are not valid",
-  eventStartEndExplication: "An event is started when a start amount is entered. An event is ended when an end amount is entered.",
+  invalidValues_failed: "The values you entered are not valid",
+  eventStartEndExplication: "An event is started when a start amount is entered. An event is ended when an end amount is entered. If there is an start amount, there must be an start date. Same for end amount with end date.",
 }
