--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -26,7 +26,7 @@
   eventUpdated_failed: "L'événement n'a pas pu être mis à jour",
   eventStarted: "L'événement à démarrer",
   eventStartFailed: "L'événement n'a pu être démarrer",
-  datesInvalid_failed: "Les dates rentrées ne sont pas valides",
-  eventStartEndExplication: "Un événement est démarré lorsqu'il y a un montant initial d'ouverture de caisse. Un événement est fermé (terminé) lorsqu'un montant de fermeture de  caisse est rentré.",
-  
+  invalidValues_failed: "Les valeurs rentrées ne sont pas valides",
+  eventStartEndExplication: "Un événement est démarré lorsqu'il y a un montant initial d'ouverture de caisse. Un événement est fermé (terminé) lorsqu'un montant de fermeture de  caisse est rentré. S'il y a un montant de ouverture de caisse, il doit y avoir une date de d/but. Idem pour fermerture de caisse avec la date de fin.",
+
 }
