--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -7,9 +7,9 @@
   startDate : "Date début",
   endDate : "Date fin",
   startAmount : "Ouverture de caisse",
-  endAmount : "Fermeture de caisse", 
+  endAmount : "Fermeture de caisse",
   workshop : "Atelier",
-  cashier : "Caisse", 
+  cashier : "Caisse",
   removedEventMessage : "L'événement a été supprimé",
   newEvent: "Ajouter un événement",
   eventWelcome : "Liste des événements",
@@ -29,4 +29,29 @@
   invalidValues_failed: "Les valeurs rentrées ne sont pas valides",
   eventStartEndExplication: "Un événement est démarré lorsqu'il y a un montant initial d'ouverture de caisse. Un événement est fermé (terminé) lorsqu'un montant de fermeture de  caisse est rentré. S'il y a un montant de ouverture de caisse, il doit y avoir une date de d/but. Idem pour fermerture de caisse avec la date de fin.",
 
+  eventDataErrors: {
+    app: {
+      name: {
+        empty: "Vous devez entrer un nom"
+      },
+      type: {
+        empty: "Vous devez choisir un type",
+        invalid: "Les types valides sont $t(workshop) and $t(cashier)"
+      },
+      startDate: {
+        empty: "Vous devez entrer une date de début",
+        invalid: "La date de début n'est pas une date valide"
+      },
+      endDate: {
+        invalid: "La date de fin doit arriver plus tard que la date de début"
+      },
+      startAmount: {
+        error: "$t(event::startAmount) doit être un nombre positif"
+      },
+      endAmount: {
+        empty: "$t(event::endAmount) doit être présent lors de la fermeture de l'événement",
+        error: "$t(event::endAmount) doit être un nombre positif"
+      }
+    }
+  }
 }
