--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -7,9 +7,9 @@
   startDate : "Start date",
   endDate : "End date",
   startAmount : "Start amount",
-  endAmount : "End amount", 
+  endAmount : "End amount",
   workshop : "Workshop",
-  cashier : "Cashier", 
+  cashier : "Cashier",
   removedEventMessage : "Event was removed",
   newEvent: "Add event",
   eventWelcome : "Events list",
@@ -28,4 +28,32 @@
   eventStartFailed: "The event could not be started",
   invalidValues_failed: "The values you entered are not valid",
   eventStartEndExplication: "An event is started when a start amount is entered. An event is ended when an end amount is entered. If there is an start amount, there must be an start date. Same for end amount with end date.",
+
+
+  eventDataErrors: {
+    app: {
+      name: {
+        empty: "You must enter a name"
+      },
+      type: {
+        empty: "You must choose a type",
+        invalid: "Valid types are $t(event::workshop) and $t(event::ashier)"
+      },
+      startDate: {
+        empty: "You must enter a start date",
+        invalid: "The start date is not a valid date"
+      },
+      endDate: {
+        invalid: "The end date must be later than the start date"
+      },
+      startAmount: {
+        empty: "$t(event::startAmount) must be entered when closing an event",
+        error: "$t(event::startAmount) must be a positive number"
+      },
+      endAmount: {
+        empty: "$t(event::endAmount) must be entered when closing an event",
+        error: "$t(event::endAmount) must be a positive number"
+      }
+    }
+  }
 }
