--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "role": "event",
   "mykoop": {
     "dependencies": {
-      "database": "^1.0.0-rc"
+      "database": "^1.0.0"
     }
   },
-  "version": "1.0.0-rc",
+  "version": "1.0.0",
   "description": "event module for My Koop",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,6 @@
     "async": "^0.9.0",
     "lodash": "^2.4.1",
     "mykoop-logger": "git://github.com/my-koop/module.logger",
-    "mykoop-utils": "git://github.com/my-koop/module.utils#rc"
+    "mykoop-utils": "git://github.com/my-koop/module.utils#final"
   }
 }
