open and closed event on 2 different routes and fix styling and formatting bug

--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -15,8 +15,8 @@
   eventWelcome : "Events list",
   registeredToEventConfirmation : "You have been registered to the event",
   registerToEventPrompt : "Do you want to register to this event ?",
-  switchEventState_true: "Show open",
-  switchEventState_false: "Show closed",
+  switchEventState_closed: "Show open",
+  switchEventState_open: "Show closed",
   updateEventWelcome: "Editing event",
   countRegistered: "# Registered",
   startEvent: "Start event",
