--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -15,8 +15,8 @@
   eventWelcome : "Liste des événements",
   registeredToEventConfirmation : "Vous vous êtes enregistré à l'événement",
   registerToEventPrompt : "Voulez-vous vous enregistrer à cet événement ?",
-  switchEventState_true: "Afficher ouvertes",
-  switchEventState_false: "Afficher fermées",
+  switchEventState_closed: "Afficher ouvertes",
+  switchEventState_open: "Afficher fermées",
   updateEventWelcome: "Édition de l'événement",
   countRegistered: "# Enregistrés",
   startEvent: "Commencer l'événement",
