--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -27,6 +27,9 @@
   eventStarted: "The event was started",
   eventStartFailed: "The event could not be started",
   invalidValues_failed: "The values you entered are not valid",
+  removeEndDateWarning: "To preserve data consistency, removing the end date will automatically set the event to started.",
+  removeStartAmountWarning: "To preserve data consistency, removing the start amount will automatically set the event to not started.",
+
 
   eventDataErrors: {
     app: {
