--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "role": "event",
   "mykoop": {
     "dependencies": {
-      "database": "^1.0.0"
+      "database": "^1.0.0",
+      "core": "^1.0.0"
     }
   },
   "version": "1.0.0",
