--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -29,6 +29,9 @@
   invalidValues_failed: "Les valeurs rentrées ne sont pas valides",
   removeEndDateWarning: "Afin de préserver la cohérence des données, retirer la date de fin remettra automatiquement l'événement à l'état commencé.",
   removeStartAmountWarning: "Afin de préserver la cohérence des données, retirer le montant initial dans la caisse remettra automatiquement l'événement à l'état non commencé.",
+  eventNotesTitle: "Notes de l'événement",
+  showNotes: "Voir les notes de l'événement",
+  noteCount: "# Notes",
 
   eventDataErrors: {
     app: {
