Revamp the public facing for events

--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -12,7 +12,6 @@
   cashier : "Cashier",
   removedEventMessage : "Event was removed",
   newEvent: "Add event",
-  eventWelcome : "Events list",
   registeredToEventConfirmation : "You have been registered to the event",
   registerToEventPrompt : "Do you want to register to this event ?",
   switchEventState_closed: "Show open",
@@ -32,6 +31,11 @@
   eventNotesTitle: "Event notes",
   showNotes: "Show event notes",
   noteCount: "# Notes",
+  eventPublicWelcome : "Events calendar",
+  eventAdminWelcome : "Events list",
+  eventList: "Events list",
+  register: "Register",
+  unregister: "Unregister",
 
   eventDataErrors: {
     app: {
