added a user list to show all users registered to an event

--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -37,6 +37,7 @@
   eventList: "Events list",
   register: "Register",
   unregister: "Unregister",
+  editUsersInEvent: "Edit users in event",
 
   eventDataErrors: {
     app: {
