Minor UX fixes.

--- a/locales/en/event.json5
+++ b/locales/en/event.json5
@@ -3,7 +3,7 @@
   editEventTooltip : "Edit event",
   eventNew_failed: "The event couldn't be added",
   eventNew_success: "The event was added",
-  createEventWelcome: "Creating an event",
+  createEventWelcome: "Create an event",
   type : "Type",
   startDate : "Start date",
   endDate : "End date",
@@ -33,7 +33,8 @@
   showNotes: "Show event notes",
   noteCount: "# Notes",
   eventPublicWelcome : "Events calendar",
-  eventAdminWelcome : "Events list",
+  eventAdminWelcome_open: "Open events list",
+  eventAdminWelcome_closed: "Closed events list",
   eventList: "Events list",
   register: "Register",
   unregister: "Unregister",
