--- a/locales/fr/event.json5
+++ b/locales/fr/event.json5
@@ -33,7 +33,8 @@
   showNotes: "Voir les notes de l'événement",
   noteCount: "# Notes",
   eventPublicWelcome : "Calendrier des événements",
-  eventAdminWelcome : "Liste des événements",
+  eventAdminWelcome_open: "Liste des événements ouverts",
+  eventAdminWelcome_closed: "Liste des événements terminés",
   eventList: "Liste des événements",
   register: "M'inscrire",
   unregister: "Me désinscrire",
